--- a/golang/makefile
+++ b/golang/makefile
@@ -1,4 +1,4 @@
 build:
-	@GOOS=windows GOARCH=386 CGO_ENABLED=0 go build main.go
-build64:
-	@GOOS=windows GOARCH=amd64 CGO_ENABLED=0 go build main.go
+	@GOOS=windows GOARCH=386 CGO_ENABLED=0 go build -o speedtest_32.exe .
+	@GOOS=windows GOARCH=amd64 CGO_ENABLED=0 go build -o speedtest_64.exe .
+	
